--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="text-sm text-center">
-      <a href="{% url 'login' %}" class="font-medium text-green-600 hover:text-green-500">
+      <a href="{% url 'account_login' %}" class="font-medium text-green-600 hover:text-green-500">
         Back to login
       </a>
     </div>
