--- a/core/templates/core/communities.html
+++ b/core/templates/core/communities.html
@@ -16,7 +16,7 @@
         <i class="fas fa-plus mr-2"></i> Create Community
       </a>
       {% else %}
-      <a href="{% url 'login' %}" class="inline-block bg-[#003366] hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300">
+      <a href="{% url 'account_login' %}" class="inline-block bg-[#003366] hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300">
         <i class="fas fa-sign-in-alt mr-2"></i> Login to Create Community
       </a>
       {% endif %}
@@ -162,7 +162,7 @@
           <i class="fas fa-plus mr-2"></i> Create Community
         </a>
       {% else %}
-        <a href="{% url 'login' %}" class="inline-block bg-[#003366] hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300">
+        <a href="{% url 'account_login' %}" class="inline-block bg-[#003366] hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300">
           <i class="fas fa-sign-in-alt mr-2"></i> Login to Create Community
         </a>
       {% endif %}
