--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="text-center">
-      <a href="{% url 'login' %}" 
+      <a href="{% url 'account_login' %}" 
          class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
           <ion-icon name="log-in" class="h-5 w-5 text-green-500 group-hover:text-green-400"></ion-icon>
