--- a/accounts/templates/accounts/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset_confirm.html
@@ -89,7 +89,7 @@
     {% endif %}
 
     <div class="text-sm text-center">
-      <a href="{% url 'login' %}" class="font-medium text-green-600 hover:text-green-500">
+      <a href="{% url 'account_login' %}" class="font-medium text-green-600 hover:text-green-500">
         Back to login
       </a>
     </div>
