--- a/core/templates/core/community_discussions.html
+++ b/core/templates/core/community_discussions.html
@@ -158,7 +158,7 @@
                 <i class="fas fa-sign-in-alt mr-2"></i> Join Community to Start Discussion
               </a>
             {% else %}
-              <a href="{% url 'login' %}?next={{ request.path }}" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-300">
+              <a href="{% url 'account_login' %}?next={{ request.path }}" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-300">
                 <i class="fas fa-sign-in-alt mr-2"></i> Login to Join Community
               </a>
             {% endif %}
@@ -192,7 +192,7 @@
               <i class="fas fa-sign-in-alt mr-2"></i> Join Community
             </a>
           {% elif not request.user.is_authenticated %}
-            <a href="{% url 'login' %}?next={{ request.path }}" class="w-full inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded text-center mb-4">
+            <a href="{% url 'account_login' %}?next={{ request.path }}" class="w-full inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded text-center mb-4">
               <i class="fas fa-sign-in-alt mr-2"></i> Login to Join
             </a>
           {% endif %}
