--- a/core/templates/core/discussion_detail.html
+++ b/core/templates/core/discussion_detail.html
@@ -155,7 +155,7 @@
         {% elif not request.user.is_authenticated %}
           <div class="bg-white rounded-lg shadow-md p-6 text-center">
             <p class="text-gray-600 mb-4">You need to be logged in to comment on this discussion</p>
-            <a href="{% url 'login' %}?next={{ request.path }}" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-300">
+            <a href="{% url 'account_login' %}?next={{ request.path }}" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-300">
               Log in to Comment
             </a>
           </div>
