--- a/core/templates/core/more_sites.html
+++ b/core/templates/core/more_sites.html
@@ -173,7 +173,7 @@
           <i class="fas fa-plus mr-2"></i> Suggest Resource
         </a>
         {% else %}
-        <a href="{% url 'login' %}" class="bg-blue-900 text-white px-4 py-2 rounded inline-block hover:bg-blue-700 transition">
+        <a href="{% url 'account_login' %}" class="bg-blue-900 text-white px-4 py-2 rounded inline-block hover:bg-blue-700 transition">
           <i class="fas fa-sign-in-alt mr-2"></i> Login to Add
         </a>
         {% endif %}
