--- a/core/templates/core/product_detail.html
+++ b/core/templates/core/product_detail.html
@@ -160,7 +160,7 @@
             </form>
             {% else %}
             <p class="text-gray-600 mb-8">
-                Please <a href="{% url 'login' %}" class="text-blue-900 hover:underline">login</a> to leave a review.
+                Please <a href="{% url 'account_login' %}" class="text-blue-900 hover:underline">login</a> to leave a review.
             </p>
             {% endif %}
 
