--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -304,13 +304,25 @@
           <span>|</span>
 
           {% if user.is_authenticated %}
-            <a href="{% url 'profile' %}" class="hover:underline">Profile</a>
+            <div class="relative group">
+              <button class="hover:underline flex items-center">
+                {{ user.username }}
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                </svg>
+              </button>
+              <div class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-1 z-50 hidden group-hover:block">
+                <a href="{% url 'dashboard' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Dashboard</a>
+                <a href="{% url 'profile' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile</a>
+                <a href="{% url 'payment_history' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Payment History</a>
+                <div class="border-t border-gray-100 my-1"></div>
+                <a href="{% url 'account_logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" id="logout-link">Logout</a>
+              </div>
+            </div>
             {% if request.is_esa_admin %}
             <span>|</span>
             <a href="{% url 'admin_dashboard' %}" class="hover:underline text-red-300">Admin Panel</a>
             {% endif %}
-            <span>|</span>
-            <a href="{% url 'account_logout' %}" class="hover:underline" id="logout-link">Logout</a>
           {% else %}
             <a href="{% url 'account_login' %}" class="hover:underline">Sign In</a>
             <span>|</span>
